Code get Status Donation Health Process, Status Request Health Process and add API for SwaggerUI
